--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <h3 >Web developer!</h3>
                 </div>    
                         <p class="about-me">
-                             Hello, im Marlon B. Mendoza Jr, and you can call me je or jr. I'm grade 11 ICT student in CCAI. I live in philippines. I'm ambitious person and I have a big goal. I want to learn new things about programming because it is my habit, everytime i learn new things it makes me happy. I want to become IT student because of my habit and because of high paying jobs in IT industry, since I need money to support my family in the future. My dream job is to be a full-stack   developer.
+                             Hello, im Marlon B. Mendoza Jr, and you can call me je or jr. I'm grade 11 ICT student in CCAI. I live in philippines. I'm ambitious person and I have<br> a big goal. I want to learn new things about programming because it is my habit, everytime i learn new things it makes me happy. I want to become<br> IT student because of my habit and because of high paying jobs in IT industry, since I need money to support my family in the future. My dream job is to be a full-stack   developer.
                         </p>
          <div class="skill-position">               
               <h1>Skills</h1>          
